# projeto_todo_dia

./: .gitattributes  .gitignore  pyproject.toml
base_static/global/css/: global-style.css  global.css
base_static/global/js/: script_global.js
base_templates/global/: base.html
base_templates/partials/: footer.html  header.html  navbar.html
src/: manage.py
src/core/: urls.py  views.py
src/core/templates/core/: home.html
src/motivations/: apps.py
src/projeto_todo_dia/: asgi.py  settings.py  urls.py  wsgi.py
src/users/: urls.py  views.py
src/users/templates/users/: login.html
staticfiles/users/css/: users.css
