[project]
name = "projeto-todo-dia"
version = "0.1.0"
description = ""
authors = [
    {name = "ezerodrigues",email = "ezerodrigues@msn.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_todo_dia", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.16.0"
ruff = "^0.11.12"
setuptools = "^80.9.0"
wheel = "^0.45.1"
pillow = "^11.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
